--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@lottiefiles/dotlottie-react": "^0.8.12",
+    "@supabase/supabase-js": "^2.45.4",
     "framer-motion": "^11.5.6",
     "next": "14.2.13",
     "next-auth": "^4.24.7",
