--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@lottiefiles/dotlottie-react": "^0.8.12",
     "@supabase/supabase-js": "^2.45.4",
+    "@types/jsonwebtoken": "^9.0.7",
     "framer-motion": "^11.5.6",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.13",
     "next-auth": "^4.24.7",
     "nodemailer": "^6.9.15",
